# mancala-engine

./: .clang-format  CMakeLists.txt  README.md  gamelog.txt  main.c  main.cpp  mancala.c  mancala.h  mancala.hpp  run.sh
src/: main.cpp  mancala.cpp  mancala.hpp  minimax.cpp  minimax.hpp  unittest.cpp
